# data-structures

./: .gitignore  README.md  pyproject.toml
binary-search-tree/: bst.py
linked-list/: linked-list.c  linked-list.py
pointers/: pointers.c
recursion/: factorial.py  traverse-list.py
stack/: stack.py
