[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = "Implementações de estruturas de dados"
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "ruff check . && blue --check -S . --diff && isort --check --diff ."
format = "blue -S .  && isort ."